--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "src/async-await.js",
   "scripts": {
     "lint": "eslint gulp gulpfile.babel.js ./webpack*.*\\.js",
-    "develop": "gulp develop && node build/main"
+    "develop": "gulp develop && node build/main",
+    "test": "karma start",
+    "test-multi": "karma start --single-run=false"
   },
   "engines": {
     "node": ">= 5.1.1",
@@ -32,12 +34,14 @@
     "babel-plugin-transform-decorators": "^6.3.13",
     "babel-plugin-transform-runtime": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "babel-runtime": "^6.3.13",
+    "chai": "^3.4.1",
     "del": "^2.0.2",
     "eslint": "^1.8.0",
     "eslint-loader": "^1.1.1",
-    "eslint-plugin-react": "^3.7.1",
+    "eslint-plugin-react": "^3.11.3",
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.5",
     "gulp": "^3.9.0",
@@ -55,14 +59,30 @@
     "gulp-template": "^3.0.0",
     "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.6",
+    "jest-cli": "^0.8.1",
+    "jest-webpack-alias": "^2.0.0",
+    "karma": "^0.13.15",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-growl-reporter": "^0.1.1",
+    "karma-mocha": "^0.2.1",
+    "karma-sinon": "^1.0.4",
+    "karma-sourcemap-loader": "^0.3.6",
+    "karma-webpack": "^1.7.0",
     "mkdirp": "^0.5.1",
+    "mocha": "^2.3.4",
+    "react-addons-test-utils": "^0.14.3",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.4",
+    "sinon": "^1.17.2",
     "url-loader": "^0.5.6",
     "vinyl-source-stream": "^1.1.0",
     "webpack": "^1.12.9"
   },
   "dependencies": {
-    "babel-polyfill": "^6.3.14"
+    "babel-polyfill": "^6.3.14",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3"
   }
 }
